# unicode-general-category

./: .travis.yml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
src/: category.rs  lib.rs  tables.rs
