[package]
name = "unicode-general-category"
version = "0.2.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/unicode-general-category"
documentation = "https://docs.rs/crate/unicode-general-category"
repository = "https://github.com/yeslogic/unicode-general-category"

readme = "README.md"
license = "Apache-2.0"

description = "Fast lookup of the Unicode General Category property for char"
keywords = ["unicode", "general", "category"]
categories = ["text-processing"]

[badges]
travis-ci = { repository = "yeslogic/unicode-general-category" }

[dependencies]
